# init_test

./: CMakeLists.txt  package.xml
include/init_test/: node_1.hpp  node_2.hpp
launch/: two_nodes.launch.py
src/: node_1.cpp  node_2.cpp
